[gd_scene load_steps=3 format=3 uid="uid://6my7uk0ymjke"]

[ext_resource type="Script" uid="uid://dvrakog0hb8by" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://da22ctof8levq" path="res://examples/abilities_as_states/abilities_as_states.tscn" id="2_0xm2m"]

[node name="Main" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_ig7tw")
examples = Array[PackedScene]([ExtResource("2_0xm2m")])

[node name="MainMenu" type="CenterContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="MainMenuContent" type="VBoxContainer" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/MainMenuContent"]
layout_mode = 2
text = "Godot Gameplay Abilities"
horizontal_alignment = 1

[node name="ExampleMenu" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="BackToMainMenuButton" type="Button" parent="ExampleMenu"]
unique_name_in_owner = true
layout_mode = 2
text = "Back to main menu"

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="ExampleSubViewport" type="SubViewport" parent="SubViewportContainer"]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1152, 305)
render_target_update_mode = 4
